--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
-        "test":"mocha"   
-       }
+        "test": "mocha"
+    },
+    "dependencies": {
+        "chai": "^4.2.0"
+    }
 }
