--- a/cookie/package.json
+++ b/cookie/package.json
@@ -9,8 +9,14 @@
   "author": "Ethan",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "jade": "^1.11.0",
+    "md5": "^2.2.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.4.0",
     "swal": "^0.1.0",
     "underscore": "^1.9.2"
   }
