--- a/cookie/package.json
+++ b/cookie/package.json
@@ -15,6 +15,7 @@
     "jade": "^1.11.0",
     "md5": "^2.2.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.4.0",
     "swal": "^0.1.0",
