--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
         "test": "mocha"
     },
     "dependencies": {
-        "chai": "^4.2.0"
+        "chai": "^4.2.0",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "mocha": "^8.2.1",
+        "should": "^13.2.3"
     }
 }
