--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "scripts": {
-        "test": "mocha"
+        "test": "mocha ./inflearn/express/index.spec.js"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "chai": "^4.2.0",
         "express": "^4.17.1",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
         "mocha": "^8.2.1",
-        "should": "^13.2.3"
+        "should": "^13.2.3",
+        "supertest": "^6.0.1"
     }
 }
