--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "scripts": {
-        "test": "mocha ./inflearn/express/index.spec.js"
+        "test": "NODE_DNV=test mocha ./inflearn/express/api/user/user.spec.js -w",
+        "start": "node ./inflearn/express/api/bin/www.js"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
         "chai": "^4.2.0",
         "express": "^4.17.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "sequelize": "^6.3.5",
+        "sqlite3": "^5.0.0"
     },
     "devDependencies": {
         "mocha": "^8.2.1",
